# timematic

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: codecov.yml  nox.yml  python-package.yml  semantic-release.yml
docs/: conf.py  index.rst  wordlist.txt
src/timematic/: __init__.py  _constants.py  _units.py  _utils.py  constants.py  enums.py  units.py  utils.py
tests/: test_utils.py
